15.sep (ws)
      - fix broken autobeamer
14.sep (ws)
      - foto mode: implemented: drag&drop selected frame in MuseScore to oowriter
        using eps format
      - renamed appstyle.st to appstyle-dark.css (its a "cascading style sheet")
      - add "standard" app style "appstyle.st"
       (la)
      - Fix #7077: Applying double-note tremolo to dotted notes fails and alter measure duration
13.sep (ws)
      - new feature: fotomode
12.sep (lv)
      - #5637 support reading bww files: irregular measures
10.sep (ws)
      - start port of kde oxygen style to make it available for
        windows
8.sep (ws)
      - add application style file to preferences
7.sep (ws)
      - command line option "-i" also loads the application style
        sheet from INSTALLPATH/styles/appstyle.st
        (see http://doc.qt.nokia.com/4.7-snapshot/stylesheet.html)
6.sep (ws)
      - add preferences for osc support (enable/disable, port number)
4.sep (ws)
      - more code for midi remote control
      - framework for osc support
30.aug (db)
      - Fix #6937: Measure Properties should be modal dialog
29.aug (ws)
      - implemented subbeam control (1/32 & 1/64)
      - feathered beams
      (la)
      - fix #6775: Seg. fault by double clicking any element twice
      - fix #6888: When exchanging voice, voice 1 is removed
28.aug (ws)
      - new element ChordLine: editable bezier line attached to
        top note of chord (for fall, doit, "plop" and bend)
      - implemented beams over systems
      (la)
      - fix get keysig from plugin when concert pitch mode is set
      - make command line option "-i" cross platform
27.aug (ws)
      - make note dot position editable
26.aug (ws)
      - fix layout of dottet rests
      - fix dot position of rests <= 1/32 (dots have to be raised)
      - layout y position of rests in a multi voice context
24.aug (ws)
      - header/footer replacing page number and copyright
23.aug (ws)
      - replace dynamic generated icons by static files